[tool.poetry]
name = "samgpt"
version = "0.1.0"
description = ""
authors = ["Sambiase <marsamb@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
python-decouple = "^3.8"
openai = "^0.27.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
